test/files/errors/struct_alreadyDef.jg
lol struct {
    x int;
    y int;
}

lol struct {
    s string;
}

_main int ()
{
    0 return;
}